# trinci-contract-template-rust

./: CHANGELOG.md  Cargo.toml  README.md
src/: lib.rs  types.rs
